plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

repositories {
    mavenCentral()
}

dependencies {
    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    // Database Access
    implementation 'com.mysql:mysql-connector-j:8.3.0'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'org.hibernate:hibernate-core:6.2.0.CR3'
    implementation 'org.mybatis:mybatis:3.5.12'
    implementation 'org.jooq:jooq:3.16.8'
    implementation 'org.jooq:jooq-codegen:3.16.8'
    implementation 'org.jooq:jooq-meta:3.16.8'
    implementation 'com.h2database:h2:2.2.220'

    // Apache
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'org.apache.commons:commons-csv:1.9.0'
    implementation 'org.apache.pdfbox:pdfbox:2.0.27'

    // Google
    implementation 'com.google.guava:guava:33.0.0-jre'
    implementation 'com.google.inject:guice:5.1.0'

    // JSON
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0-rc3'

    // XML
    implementation 'org.jdom:jdom2:2.0.6.1'
    // implementation 'com.sun.xml.bind:jaxb-impl:2.3.3' <-- schon über andere Dependencies enthalten

    // Logging
    // implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'org.slf4j:slf4j-reload4j:2.0.7'
    // implementation 'org.slf4j:slf4j-log4j12:2.0.7'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    testImplementation 'org.mockito:mockito-core:4.9.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.9.0'
    testImplementation 'org.assertj:assertj-core:3.23.1'

    testImplementation 'org.junit.platform:junit-platform-suite:1.10.1'
}

gradle.projectsEvaluated {
    tasks.withType(JavaCompile).tap {
        configureEach {
            options.compilerArgs << "-Xlint:deprecation"   // "-Xlint:deprecation" "-Xlint:unchecked"
        }
    }
}

javafx {
    version = "16"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.graphics', 'javafx.web', 'javafx.swing' ]
}

/* put the following line in the VM options of the in die VM options of the run configuration of main classes using javafx */
// --module-path "C:\Program Files\Java\javafx-sdk-16\lib" --add-modules=javafx.controls,javafx.fxml,javafx.media,javafx.graphics,javafx.web,javafx.swing

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}